--- a/apps/common/static/css/styles.css
+++ b/apps/common/static/css/styles.css
@@ -25,6 +25,11 @@ body {
 .create-plot-btn {
     padding-top: 5px;
 }
+.scrollable-menu {
+    height: auto;
+    max-height: 200px;
+    overflow-x: hidden;
+}
 .handsontable .handsontable table {
     -webkit-box-shadow: none;
     box-shadow: none;
