--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -34,72 +34,77 @@
 
 
 {% block content %}
-
-  <div class="col-lg-7">
-    <div class="box box-solid">
-      <div class="box-title">
+<div class="row">
+  <div class="col-lg-6">
+    <div class="box box-solid box-info">
+      <div class="box-header">
+        <h3 class="box-title">Details</h3>
+      </div>
+      <div class="box-body">
         <div class="list-group">
-          <div class="col-sm-3 title-desc"><br>{% trans 'title'|upper %}</div>
-          <div class="col-sm-9">
-            <ul class="list-group">
-              <li class="list-group-item">{{ object.title }}</li>
-            </ul>
-          </div>
-          <div class="col-sm-3 title-desc">{% trans 'date'|upper %}</div>
-          <div class="col-sm-9">
-            <ul class="list-group">
-              <li class="list-group-item list-group-item-sm">{{ object.start|date:"m/d/Y H:i" }} -
-                {{ object.end|date:"m/d/Y H:i" }}</li>
-            </ul>
-          </div>
-          <div class="col-sm-3 title-desc">{% trans 'status'|upper %}</div>
-          <div class="col-sm-9">
-            <ul class="list-group">
-              <li class="list-group-item list-group-item-sm">{{ object.get_status_display }}</li>
-            </ul>
-          </div>
-          <div class="col-sm-3 title-desc">{% trans 'owners'|upper %}</div>
-          <div class="col-sm-9">
-            <ul class="list-group">
-              {% for member in object.owners %}
+          <div class="row">
+            <div class="col-sm-3 title-desc"><br>{% trans 'title'|upper %}</div>
+            <div class="col-sm-9">
+              <ul class="list-group">
+                <li class="list-group-item">{{ object.title }}</li>
+              </ul>
+            </div>
+            <div class="col-sm-3 title-desc">{% trans 'date'|upper %}</div>
+            <div class="col-sm-9">
+              <ul class="list-group">
+                <li class="list-group-item list-group-item-sm">{{ object.start|date:"m/d/Y H:i" }} -
+                  {{ object.end|date:"m/d/Y H:i" }}</li>
+              </ul>
+            </div>
+            <div class="col-sm-3 title-desc">{% trans 'status'|upper %}</div>
+            <div class="col-sm-9">
+              <ul class="list-group">
+                <li class="list-group-item list-group-item-sm">{{ object.get_status_display }}</li>
+              </ul>
+            </div>
+            <div class="col-sm-3 title-desc">{% trans 'owners'|upper %}</div>
+            <div class="col-sm-9">
+              <ul class="list-group">
+                {% for member in object.owners %}
                 <li class="list-group-item list-group-item-sm">
                   <a href="{{ member.get_absolute_url }}">{{ member.full_name }}</a>
                 </li>
-              {% endfor %}
-              {% if not object.owners %}
+                {% endfor %}
+                {% if not object.owners %}
                 <li class="list-group-item">&nbsp;</li>
-              {% endif %}
-            </ul>
-          </div>
-          <div class="col-sm-3 title-desc external-event">{% trans 'editors'|upper %}</div>
-          <div class="col-sm-9">
-            <ul class="list-group">
-              {% for member in object.editors %}
+                {% endif %}
+              </ul>
+            </div>
+            <div class="col-sm-3 title-desc external-event">{% trans 'editors'|upper %}</div>
+            <div class="col-sm-9">
+              <ul class="list-group">
+                {% for member in object.editors %}
                 <li class="list-group-item list-group-item-sm"><a
-                    href="{{ member.get_absolute_url }}">{{ member.full_name }}</a></li>
-              {% endfor %}
-              {% if not object.editors %}
+                        href="{{ member.get_absolute_url }}">{{ member.full_name }}</a></li>
+                {% endfor %}
+                {% if not object.editors %}
                 <li class="list-group-item list-group-item-sm">&nbsp;</li>
-              {% endif %}
-            </ul>
-          </div>
-          <div class="col-sm-3 title-desc">{% trans 'viewers'|upper %}</div>
-          <div class="col-sm-9">
-            <ul class="list-group">
-              {% for member in object.viewers %}
+                {% endif %}
+              </ul>
+            </div>
+            <div class="col-sm-3 title-desc">{% trans 'viewers'|upper %}</div>
+            <div class="col-sm-9">
+              <ul class="list-group">
+                {% for member in object.viewers %}
                 <li class="list-group-item list-group-item-sm"><a
-                    href="{{ member.get_absolute_url }}">{{ member.full_name }}</a></li>
-              {% endfor %}
-              {% if not object.viewers %}
+                        href="{{ member.get_absolute_url }}">{{ member.full_name }}</a></li>
+                {% endfor %}
+                {% if not object.viewers %}
                 <li class="list-group-item list-group-item-sm">&nbsp;</li>
-              {% endif %}
-            </ul>
+                {% endif %}
+              </ul>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="col-lg-5">
+  <div class="col-lg-6">
     <div class="nav-tabs-custom">
       <ul class="nav nav-tabs">
         <li class="active"><a href="#all" data-toggle="tab">{% trans 'All' %}</a></li>
@@ -125,11 +130,13 @@
       <!-- /.tab-content -->
     </div>
   </div>
-
+</div>
+<div class="row">
   <div class="col-lg-12">
     {% include 'comments/comment_form.html' %}
   </div>
-
+</div>
+<div class="row">
   <div class="col-lg-6">
     <div class="nav-tabs-custom">
       <ul class="nav nav-tabs">
@@ -141,7 +148,7 @@
           <div class="panel panel-default">
             <ul class="list-group">
               {% for unit in units %}
-                <a href="{{ unit.get_absolute_url }}" class="list-group-item list-group-item-sm">{{ unit }}</a>
+              <a href="{{ unit.get_absolute_url }}" class="list-group-item list-group-item-sm">{{ unit }}</a>
               {% endfor %}
             </ul>
           </div>
@@ -151,7 +158,7 @@
           <div class="panel panel-default">
             <ul class="list-group">
               {% for object in measurements %}
-                <a href="{{ object.get_absolute_url }}" class="list-group-item list-group-item-sm">{{ object }}</a>
+              <a href="{{ object.get_absolute_url }}" class="list-group-item list-group-item-sm">{{ object }}</a>
               {% endfor %}
             </ul>
           </div>
@@ -177,21 +184,42 @@
         </div>
         <div class="tab-pane" id="tags">
           {% for tag in tags %}
-            <div class="badge white" style="background: {{ tag.color }}">
-              <a href="{{ tag.get_detail_url }}">
-                <i class="fa fa-tag"></i> {{ tag.details }}
-              </a>
-            </div>
+          <div class="badge white" style="background: {{ tag.color }}">
+            <a href="{{ tag.get_detail_url }}">
+              <i class="fa fa-tag"></i> {{ tag.details }}
+            </a>
+          </div>
           {% endfor %}
         </div>
       </div>
     </div>
   </div>
+</div>
+<div class="row">
+  <div class="col-lg-6">
+    <div class="box box-solid box-info">
+      <div class="box-header">
+        <h3 class="box-title">Units graph</h3>
+      </div>
+      <div class="box-body">
+        <div class="graph-area"></div>
+      </div>
+    </div>
+  </div>
+</div>
 
-  {% include 'alert.html' with obj=object.title %}
+{% include 'alert.html' with obj=object.title %}
 
 {% endblock %}
 
 {% block script %}
   <script src="{% static 'js/recent.js' %}"></script>
+  <script src="{% static 'js/d3.v3.min.js' %}"></script>
+  <script src="{% static 'js/graph.js' %}"></script>
+
+  <script type="text/javascript">
+    $(function() {
+      render_graph(JSON.parse( '{{ units_graph_json}}'), '.graph-area')
+    });
+  </script>
 {% endblock %}
