--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -184,9 +184,9 @@
           <div class="btn-group">
             <button  style="display:none" class="addcolumn btn bg-olive"><i class="fa fa-plus"></i> {% trans 'Add Column' %}</button>
           </div>
-          <!--<div class="btn-group">-->
-            <!--<button  class="show-plot btn bg-olive"><i class="fa fa-area-chart"></i> {% trans 'Create plot' %}</button>-->
-          <!--</div>-->
+          <div class="btn-group">
+            <button  style="display:none" class="show-plot btn bg-olive"><i class="fa fa-area-chart"></i> {% trans 'Create plot' %}</button>
+          </div>
           <!--<div class="btn-group pull-right">-->
             <!--<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">History <span class="caret"></span></button>-->
             <!--<ul class="dropdown-menu scrollable-menu revision-list" role="menu">-->
@@ -195,6 +195,35 @@
               <!--{% endfor %}-->
             <!--</ul>-->
           <!--</div>-->
+          <div class="plot-area">
+            <div class="voffset1">
+              <form id="plot-form" style="display: none">
+                <div class="plot-link"></div>
+                <div class="form-inline">
+                  <div class="form-group">
+                    <select  class="form-control asis" name="xasis">
+                      <option selected disabled>x-asis</option>
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <select class="form-control asis" name="yasis">
+                      <option selected disabled>y-asis</option>
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <select  class="input-small form-control" name="type">
+                      <option disabled>type</option>
+                      <option selected value="scatter">scatter</option>
+                      <option value="bar">bar</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="create-plot-btn">
+                  <button class="create-plot btn bg-olive"><i class="fa fa-area-chart"></i> {% trans 'Create plot' %}</button>
+                </div>
+              </form>
+            </div>
+          </div>
           <div class="top voffset2">
             <div class="wrap-handsontable">
               <div id="dataTable" data-content='[[&quot;&quot;, &quot;&quot;], [&quot;&quot;, &quot;&quot;]]'
@@ -247,6 +276,7 @@
   <script src="{% static 'js/handson-table-new.js' %}"></script>
   <script src="{% static 'jstree/jstree.js' %}"></script>
   <script src="{% static 'js/tree.js' %}"></script>
+  <script src="{% static 'js/plot.js' %}"></script>
 
   <script type="text/javascript">
     var lab_pk = '{{ lab.pk }}'
