--- a/templates/comments/comment.html
+++ b/templates/comments/comment.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-<div class="col-xs-12" data-pk="{{ comment.pk }}">
+<div class="col-xs-12 comment-block" data-pk="{{ comment.pk }}">
   <div class="list-group-item list-group-item-info list-group-item-sm disabled">
     <strong>{{ comment.init_user.full_name }}</strong>
 
